# Spurhacks

./: .gitignore
backend/: README.md  cdk.context.json  cdk.json  package-lock.json  package.json  spurhack-main.ts  spurhack-stack.ts  tsconfig.json
backend/ec2/live-gemini/: pyproject.toml
backend/ec2/live-gemini/src/live_gemini/: agent.py  graph.py  main.py
backend/ec2/live-gemini/src/live_gemini/agents/: comparison_agent.py  fallback_agent.py  navigation_agent.py  product_info_agent.py  router_agent.py
backend/ec2/live-gemini/src/live_gemini/api/: api.py  live_llm_api.py  retrieve_products_api.py
backend/ec2/live-gemini/src/live_gemini/constants/: agent_info.py  prompts.py
backend/ec2/live-gemini/src/live_gemini/enums/: agent_types.py  message_types.py
backend/ec2/live-gemini/src/live_gemini/tools/: agent_selector_tool.py  retrieve_products_tool.py  tools.py  validate_products_tool.py
backend/ec2/live-gemini/src/live_gemini/utils/: global_store.py
backend/lambda/searchFn/: package-lock.json  package.json
backend/test/: backend.test.ts
frontend/: package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/spurhacks/: package-lock.json  package.json
frontend/spurhacks/src/: App.tsx
frontend/src/: App.css  App.tsx
frontend/src/components/: ChatInput.tsx  ChatMessage.tsx  ProductCard.tsx  ProductCarousel.tsx  ProductModal.tsx  WelcomeScreen.tsx
frontend/src/config/: store-config.json
frontend/src/context/: AppContext.tsx
frontend/src/data/: products.ts  responses.ts
frontend/src/hooks/: useChatWebSocket.ts  (+5 more)
(+8 files in other folders)
